# MappeAIS1003

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
assets/models/: muffin.glb  mushroom.glb  sedan_model.glb  soda.glb  suv_model.glb  tractor_model.glb  tree_model.glb
include/BilSimulator/: CameraController.hpp  CollisionSink.hpp  Game.hpp  InputState.hpp  PowerUpManager.hpp  PowerUps.hpp  Trees.hpp  VehicleFactory.hpp  VehiclePhysics.hpp  VehicleRig.hpp  VehicleSpecs.hpp  VehicleVisuals.hpp
src/app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_game.cpp  test_input.cpp  test_physics.cpp  test_powerups.cpp  test_rig.cpp  test_trees.cpp  test_visuals.cpp
